--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Charity &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Teku Charitable Foundation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -150,16 +150,81 @@
 							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
-									<h3><a href=""#>Medical Mission in Southern Kenya</a></h3>
-									<span class="posted_by">Sep. 15th</span>
-									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p><a href="#">Learn More...</a></p>
+									<h3><a href=""#>Rising Above: Empowering Young Boys to Shun Social Vices</a></h3>
+									<span class="posted_by">Dec. 20th</span>
+									<span class="comment"><a href="">15<i class="icon-bubble2"></i></a></span>
+									<p>Introduction
+	
+										As young boys navigate the challenges of growing up, they are constantly bombarded with negative influences that can shape their choices and define their future. Social vices like drug abuse, gang violence, and reckless behavior can seem appealing, but they lead to a path of destruction. It's time to empower our young boys to rise above these vices and become the leaders of tomorrow.
+										
+										The Dangers of Social Vices</p>
+									<p><a onclick="javascript:ShowHide('HiddenDiv')">Read more</a></p>
+<div class="mid" id="HiddenDiv" style="display: none;">
+    <align="right"> 	
+	Social vices may seem harmless at first, but they can quickly spiral out of control, leading to addiction, legal troubles, and even death. They can also damage relationships, ruin reputations, and destroy potential.
+	
+	The Power of Choice
+	
+	You have the power to choose your path. You can decide to surround yourself with positive influences, pursue your passions, and cultivate healthy habits. You can choose to be a leader, a role model, and a force for good.
+	
+	Rising Above
+	
+	So, how can you rise above social vices?
+	
+	- Seek mentorship from positive role models
+	- Engage in sports, hobbies, or creative pursuits
+	- Surround yourself with supportive friends and family
+	- Focus on education and personal growth
+	- Practice self-care and mindfulness
+	
+	Conclusion
+	
+	You are the future leaders, innovators, and game-changers. Don't let social vices hold you back. Rise above, make positive choices, and unlock your full potential. Remember, you have the power to shape your destiny and create a brighter tomorrow.
+	
+	Let's work together to create a generation of young boys who will change the world for the better!</div>
 								</div>
 							</div> 
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
+							<div class="blog-text">
+								<div class="prod-title">
+									<h3><a href=""#>Raising the Girl Child: Empowering a Brighter Future</a></h3>
+									<span class="posted_by">Dec. 20th</span>
+									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+									<p>Introduction
+		
+										Raising the girl child is a vital aspect of building a more equitable and just society. Girls are the future mothers, leaders, innovators, and change-makers of the world. However, in many parts of the globe, girls still face significant barriers to reaching their full potential. This article explores the importance of raising the girl child and provides practical tips for parents, caregivers,</p>
+									<p><a onclick="javascript:ShowHidee('HiddenDivv')">Read more</a></p>
+<div class="mid" id="HiddenDivv" style="display: none;">
+    <align="right"> and communities to support their growth and empowerment.
+		
+		The Importance of Raising the Girl Child
+		
+		1. Breaking Gender Stereotypes: Raising girls to challenge traditional gender roles and stereotypes helps create a more inclusive and diverse world.<br/>
+		2. Education and Economic Empowerment: Educated girls are more likely to secure better jobs, earn higher incomes, and contribute to their communities' economic growth.<br/>
+		3. Health and Well-being: Girls who receive proper healthcare and nutrition are more likely to lead healthy and productive lives.<br/>
+		4. Leadership and Decision-Making: Empowering girls to take on leadership roles helps create a more balanced and representative society.<br/>
+		<br/>
+		Practical Tips for Raising the Girl Child
+		<br/>
+		1. Encourage Education: Support girls' education and provide access to quality learning resources.<br/>
+		2. Foster Self-Confidence: Help girls develop self-esteem and self-worth through positive reinforcement and encouragement.<br/>
+		3. Promote Health and Nutrition: Ensure girls receive proper healthcare, nutrition, and hygiene education.<br/>
+		4. Challenge Gender Stereotypes: Engage girls in activities that challenge traditional gender roles and promote diversity.<br/>
+		5. Provide Mentorship: Pair girls with positive role models and mentors who can guide and inspire them.<br/>
+		6. Create Safe Spaces: Establish safe and supportive environments where girls can express themselves freely.<br/>
+		
+		Conclusion
+		
+		Raising the girl child requires a collective effort from parents, caregivers, communities, and societies as a whole. By empowering girls and providing them with the tools and support they need, we can create a brighter, more equitable future for all. Let us work together to break down barriers and unleash the full potential of the girl child.</div>
+								</div>
+							</div> 
+						</div>
+					</div>
+					<!-- <div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
 							<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
 							<div class="blog-text">
@@ -277,7 +342,7 @@
 							</div> 
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 text-center animate-box">
@@ -333,6 +398,32 @@
 	<!-- Superfish -->
 	<script src="js/hoverIntent.js"></script>
 	<script src="js/superfish.js"></script>
+	<script type="text/javascript">// <![CDATA[
+		function ShowHide(divId)
+		{
+			if(document.getElementById(divId).style.display == 'none')
+			{
+				document.getElementById(divId).style.display='block';
+			}
+			else
+			{
+				document.getElementById(divId).style.display = 'none';
+			}
+		}
+		// ]]></script>
+	<script type="text/javascript">// <![CDATA[
+		function ShowHidee(divId)
+		{
+			if(document.getElementById(divId).style.display == 'none')
+			{
+				document.getElementById(divId).style.display='block';
+			}
+			else
+			{
+				document.getElementById(divId).style.display = 'none';
+			}
+		}
+		// ]]></script>
 	
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
