--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Charity &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Teku Charitable Foundation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -97,8 +97,8 @@
 								<a href="#" class="fh5co-sub-ddown">Get Involved</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="#">Donate</a></li>
-									<li><a href="#">Fundraise</a></li>
-									<li><a href="#">Campaign</a></li>
+									<!-- <li><a href="#">Fundraise</a></li> -->
+									<!-- <li><a href="#">Campaign</a></li> -->
 									<li><a href="#">Philantrophy</a></li>
 									<li><a href="#">Volunteer</a></li>
 								</ul>
@@ -106,7 +106,7 @@
 							<li>
 								<a href="#" class="fh5co-sub-ddown">Projects</a>
 								 <ul class="fh5co-sub-menu">
-								 	<li><a href="#">Water World</a></li>
+								 	<!-- <li><a href="#">Water World</a></li> -->
 								 	<li><a href="#">Cloth Giving</a></li>
 								 	<li><a href="#">Medical Mission</a></li>
 								</ul>
@@ -140,7 +140,7 @@
 					<div class="row">
 						<div class="col-md-6">
 							<h3 class="section-title">Our Address</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 							<ul class="contact-info">
 								<li><i class="icon-location-pin"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
 								<li><i class="icon-phone2"></i>+ 1235 2355 98</li>
