--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 									<a href="#" class="fh5co-sub-ddown">Get Involved</a>
 									<ul class="fh5co-sub-menu">
 										<li><a href="#">Donate</a></li>
-										<li><a href="#">Fundraise</a></li>
-										<li><a href="#">Campaign</a></li>
+										<!-- <li><a href="#">Fundraise</a></li>
+										<li><a href="#">Campaign</a></li> -->
 										<li><a href="#">Philantrophy</a></li>
 										<li><a href="#">Volunteer</a></li>
 									</ul>
@@ -108,7 +108,7 @@
 								<li>
 									<a href="#" class="fh5co-sub-ddown">Projects</a>
 									<ul class="fh5co-sub-menu">
-										<li><a href="#">Water World</a></li>
+										<!-- <li><a href="#">Water World</a></li> -->
 										<li><a href="#">Cloth Giving</a></li>
 										<li><a href="#">Medical Mission</a></li>
 									</ul>
@@ -246,7 +246,7 @@
 									class="img-responsive"></p>
 						</div>
 						<div class="col-md-6 text-center animate-box">
-							<p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template"
+							<p><img src="images/cover_bg_3.jpeg" alt="Free HTML5 Bootstrap Template"
 									class="img-responsive"></p>
 						</div>
 					</div>
@@ -254,22 +254,19 @@
 						<div class="col-md-4">
 							<div class="feature-text">
 								<h3>Love</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<p>At the heart of our mission is love—a love that transcends boundaries, breaks barriers, and unites us in a shared vision of a better world. Love inspires us to see the potential in every individual, to offer a helping hand, and to build communities rooted in kindness and compassion..</p>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="feature-text">
 								<h3>Compassion</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<p>Compassion is the heartbeat of our mission—a deep, unwavering care for the struggles and dreams of others. It drives us to reach out, to listen, and to take action where it matters most. At our core, we believe that compassion is not just an emotion; it is a call to action that has the power to change lives and create a ripple of hope.</p>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="feature-text">
 								<h3>Charity</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<p>Charity is more than an act of giving—it’s a testament to the power of humanity to come together for a greater purpose. It is the bridge that connects those who can give with those in need, creating a cycle of kindness that uplifts everyone it touches.</p>
 							</div>
 						</div>
 					</div>
@@ -285,8 +282,8 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 							<h3>Our Gallery</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-								perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
+								perspiciatis accusamus asperiores sint consequuntur debitis.</p> -->
 						</div>
 					</div>
 
@@ -296,40 +293,40 @@
 							<ul id="fh5co-portfolio-list">
 
 								<li class="two-third animate-box" data-animate-effect="fadeIn"
-									style="background-image: url(images/cover_bg_1.jpg); ">
+									style="background-image: url(images/outreach.jpeg); ">
 									<a href="#" class="color-3">
 										<div class="case-studies-summary">
-											<span>Give Love</span>
+											<span>Spread Love</span>
 											<h2>Donation is caring</h2>
 										</div>
 									</a>
 								</li>
 
 								<li class="one-third animate-box" data-animate-effect="fadeIn"
-									style="background-image: url(images/cover_bg_3.jpg); ">
+									style="background-image: url(images/outreach1.jpeg); ">
 									<a href="#" class="color-4">
 										<div class="case-studies-summary">
-											<span>Give Love</span>
-											<h2>Donation is caring</h2>
+											<!-- <span>Give Love</span>
+											<h2>Donation is caring</h2> -->
 										</div>
 									</a>
 								</li>
 
 								<li class="one-third animate-box" data-animate-effect="fadeIn"
-									style="background-image: url(images/cover_bg_1.jpg); ">
+									style="background-image: url(images/outreach3.jpeg); ">
 									<a href="#" class="color-5">
 										<div class="case-studies-summary">
-											<span>Give Love</span>
-											<h2>Donation is caring</h2>
+											<!-- <span>Give Love</span>
+											<h2>Donation is caring</h2> -->
 										</div>
 									</a>
 								</li>
 								<li class="two-third animate-box" data-animate-effect="fadeIn"
-									style="background-image: url(images/cover_bg_3.jpg); ">
+									style="background-image: url(images/outreach4.jpeg); ">
 									<a href="#" class="color-6">
 										<div class="case-studies-summary">
-											<span>Give Love</span>
-											<h2>Donation is caring</h2>
+											<!-- <span>Give Love</span>
+											<h2>Donation is caring</h2> -->
 										</div>
 									</a>
 								</li>
@@ -349,7 +346,7 @@
 
 
 
-			<div id="fh5co-content-section" class="fh5co-section-gray">
+			<!-- <div id="fh5co-content-section" class="fh5co-section-gray">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
@@ -405,7 +402,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!-- fh5co-content-section -->
 
 			<div id="fh5co-services-section">
@@ -413,8 +410,8 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
 							<h3>Our Projects. Support Us</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-								perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
+								perspiciatis accusamus asperiores sint consequuntur debitis.</p> -->
 						</div>
 					</div>
 				</div>
@@ -439,12 +436,11 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="services animate-box">
 								<span><i class="icon-heart"></i></span>
-								<h3>Shelter Giving</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<h3>Warri Medical Outreach</h3>
+								<p>In the heart of Warri, Delta State, our recent medical outreach brought much-needed care and compassion to hundreds of individuals and families. With the support of dedicated healthcare professionals and generous volunteers, we provided free medical consultations, medications, and health education to underserved communities.</p>
 							</div>
 						</div>
-						<div class="col-md-4 col-sm-4">
+						<!-- <div class="col-md-4 col-sm-4">
 							<div class="services animate-box">
 								<span><i class="icon-heart"></i></span>
 								<h3>Water Project In Kenya</h3>
@@ -467,7 +463,7 @@
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and
 									Consonantia, there live the blind texts.</p>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -480,9 +476,9 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
 							<h3>Recent From Blog</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
+							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
 								perspiciatis accusamus asperiores sint consequuntur debitis.</p>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="container">
@@ -566,8 +562,6 @@
 
 
 		</div>
-		<!-- END fh5co-page -->
-
 	</div>
 	<!-- END fh5co-wrapper -->
 
