--- a/contact.html
+++ b/contact.html
@@ -142,10 +142,9 @@
 							<h3 class="section-title">Our Address</h3>
 							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 							<ul class="contact-info">
-								<li><i class="icon-location-pin"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-								<li><i class="icon-phone2"></i>+ 1235 2355 98</li>
-								<li><i class="icon-mail"></i><a href="#">info@yoursite.com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+								<li><i class="icon-location-pin"></i>26B, Osolo Way, besides Heritage Bank, Ajao Estate. Off 7/8 Bus Stop, Osolo, Lagos State, Nigeria.</li>
+								<li><i class="icon-phone2"></i>+234-803 304 3307</li>
+								<li><i class="icon-mail"></i><a href="#">info@tekucharitablefoundation.com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-6">
