--- a/about.html
+++ b/about.html
@@ -139,38 +139,38 @@
 				<div class="row">
 					<div class="col-md-12 text-center heading-section">
 						<h3>How we started.</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<p>Our mission is to create lasting, positive change in the lives of individuals and communities by providing support, resources, and opportunities where they are needed most. We are committed to compassion, inclusivity, and sustainable impact—empowering people to overcome challenges and build a better future for themselves and generations to come.</p>
 					</div>
 				</div>
 
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12 text-center animate-box">
-						<p><img src="images/cover_bg_1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+						<p><img src="images/cover_bg_1.jpg" alt="" class="img-responsive"></p>
 					</div>
 					<div class="col-md-6 text-center animate-box">
-						<p><img src="images/cover_bg_2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+						<p><img src="images/cover_bg_2.jpg" alt="" class="img-responsive"></p>
 					</div>
 					<div class="col-md-6 text-center animate-box">
-						<p><img src="images/cover_bg_3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
+						<p><img src="images/cover_bg_3.jpg" alt="" class="img-responsive"></p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Love</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>Love is the heart of everything we do—uniting people, bridging differences, and reminding us that we are stronger when we care for one another.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Compassion</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>Compassion moves us to action. It’s the quiet strength that listens, uplifts, and walks beside those in need without judgment.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
 							<h3>Charity</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>Charity is more than giving—it’s sharing hope, dignity, and opportunity. It’s the belief that together, we can change lives.</p>
 						</div>
 					</div>
 				</div>
@@ -186,7 +186,6 @@
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 						<h3>Our Gallery</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores, perspiciatis accusamus asperiores sint consequuntur debitis.</p>
 					</div>
 				</div>
 
@@ -242,77 +241,6 @@
 				
 			</div>
 		</div>
-		
-
-		
-		<div id="fh5co-content-section" class="fh5co-section-gray">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h3>Leadership</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores, perspiciatis accusamus asperiores sint consequuntur debitis.</p>
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<div class="fh5co-team text-center animate-box">
-							<figure>
-								<img src="images/person_1.jpg" alt="user">
-							</figure>
-
-							<div>
-								<h3>Jean Doe</h3>
-								<p><span>Founder</span></p>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							</div>
-							
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-linkedin2"></i></a>
-								<a href="#"><i class="icon-facebook3"></i></a>
-							</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="fh5co-team text-center animate-box">
-							<figure>
-								<img src="images/person_2.jpg" alt="user">
-							</figure>
-							<div>
-								<h3>John Doe</h3>
-								<p><span>Founder</span></p>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							</div>
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-linkedin2"></i></a>
-								<a href="#"><i class="icon-facebook3"></i></a>
-							</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="fh5co-team text-center animate-box">
-							<figure>
-								<img src="images/person_3.jpg" alt="user">
-							</figure>
-							<div>
-								<h3>John Doe</h3>
-								<p><span>Founder</span></p>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							</div>
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-linkedin2"></i></a>
-								<a href="#"><i class="icon-facebook3"></i></a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- fh5co-content-section -->
 
 		
 		<footer>
