--- a/index.html
+++ b/index.html
@@ -410,8 +410,6 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
 							<h3>Our Projects. Support Us</h3>
-							<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-								perspiciatis accusamus asperiores sint consequuntur debitis.</p> -->
 						</div>
 					</div>
 				</div>
@@ -421,16 +419,14 @@
 							<div class="services animate-box">
 								<span><i class="icon-heart"></i></span>
 								<h3>Water Project In Kenya</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<p>Bringing clean, safe, and sustainable water to communities across Kenya—transforming lives, improving health, and unlocking potential where it’s needed most.</p>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="services animate-box">
 								<span><i class="icon-heart"></i></span>
 								<h3>Shelter Giving</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<p>Providing safe, dignified, and stable shelter for vulnerable families—restoring hope, protecting lives, and building stronger, more resilient communities.</p>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
@@ -444,24 +440,14 @@
 							<div class="services animate-box">
 								<span><i class="icon-heart"></i></span>
 								<h3>Water Project In Kenya</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<p>Bringing clean, safe, and sustainable water to communities across Kenya—transforming lives, improving health, and unlocking potential where it’s needed most.</p>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="services animate-box">
 								<span><i class="icon-heart"></i></span>
-								<h3>Water Project In Kenya</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="services animate-box">
-								<span><i class="icon-heart"></i></span>
-								<h3>Midical Mission</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<h3>Medical Mission</h3>
+								<p>In the heart of Lagos, where access to basic healthcare remains a daily struggle for many, our medical mission brought healing, hope, and human connection. From free consultations to life-saving treatments, our team of dedicated volunteers worked tirelessly to serve hundreds—proving that compassion can be the most powerful medicine of all.</p>
 							</div>
 						</div> -->
 					</div>
@@ -488,26 +474,10 @@
 								<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
 								<div class="blog-text">
 									<div class="prod-title">
-										<h3><a href="" #>Medical Mission in Southern Kenya</a></h3>
+										<h3><a href="" #>Medical Mission in Lagos</a></h3>
 										<span class="posted_by">Sep. 15th</span>
 										<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts.</p>
-										<p><a href="#">Learn More...</a></p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-6">
-							<div class="fh5co-blog animate-box">
-								<a href="#"><img class="img-responsive" src="images/cover_bg_2.jpg" alt=""></a>
-								<div class="blog-text">
-									<div class="prod-title">
-										<h3><a href="" #>Medical Mission in Southern Kenya</a></h3>
-										<span class="posted_by">Sep. 15th</span>
-										<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts.</p>
+										<p>In the heart of Lagos, where access to basic healthcare remains a daily struggle for many, our medical mission brought healing, hope, and human connection. From free consultations to life-saving treatments, our team of dedicated volunteers worked tirelessly to serve hundreds—proving that compassion can be the most powerful medicine of all.</p>
 										<p><a href="#">Learn More...</a></p>
 									</div>
 								</div>
@@ -519,11 +489,10 @@
 								<a href="#"><img class="img-responsive" src="images/cover_bg_3.jpg" alt=""></a>
 								<div class="blog-text">
 									<div class="prod-title">
-										<h3><a href="" #>Medical Mission in Southern Kenya</a></h3>
+										<h3><a href="" #>Medical Mission in Delta</a></h3>
 										<span class="posted_by">Sep. 15th</span>
 										<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts.</p>
+										<p>In remote parts of Delta State, our team delivered much-needed medical care to those who’ve gone years without it—restoring health, dignity, and hope with every visit.</p>
 										<p><a href="#">Learn More...</a></p>
 									</div>
 								</div>
