--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 						<div class="clearfix visible-sm-block"></div>
 						<div class="col-lg-4 col-md-4 col-sm-6">
 							<div class="fh5co-blog animate-box">
-								<a href="#"><img class="img-responsive" src="images/cover_bg_3.jpg" alt=""></a>
+								<a href="#"><img class="img-responsive" src="images/outreach4.jpeg" alt=""></a>
 								<div class="blog-text">
 									<div class="prod-title">
 										<h3><a href="" #>Medical Mission in Delta</a></h3>
