--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
 							<h3 class="section-title">Our Address</h3>
 							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 							<ul class="contact-info">
-								<li><i class="icon-location-pin"></i>26B, Osolo Way, besides Heritage Bank, Ajao Estate. Off 7/8 Bus Stop, Osolo, Lagos State, Nigeria.</li>
+								<li><i class="icon-location-pin"></i>26B, Isolo Way, besides Heritage Bank, Ajao Estate. Off 7/8 Bus Stop, Isolo, Lagos State, Nigeria.</li>
 								<li><i class="icon-phone2"></i>+234-803 304 3307</li>
 								<li><i class="icon-mail"></i><a href="#">info@tekucharitablefoundation.com</a></li>
 							</ul>
